--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "glob": "^7.1.1",
     "iconv-lite": "^0.4.15",
     "moment": "^2.18.1",
+    "puppeteer": "^13.5.1",
     "request": "^2.81.0"
   },
   "devDependencies": {
